--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1266,10 +1266,10 @@ and compliance).
 % Can't use \begin{inscope}, as that creates an itemize environment
 The following are within the scope of this \IS:
 \begin{enumerate}
-\item\label{it:scope-heterogeneous} homogeneous OMS as well as heterogeneous OMS (OMS that consist of parts, which are written in different languages);
+\item\label{it:scope-heterogeneous} homogeneous OMS as well as heterogeneous OMS (OMS that consist of\cbs parts written\cbe in different languages);
 \item mappings between OMS (mapping OMS symbols to OMS symbols);
-\item OMS networks (they involve several OMS and mappings between them);
-\item \label{it:scope-translation} translations between different OMS languages conforming with \DOL (translating whole OMS to another language);
+\item OMS networks (\cbs{}involving\cbe several OMS and mappings between them);
+\item \label{it:scope-translation} translations between different OMS languages conforming with \DOL (translating\cbs a\cbe whole OMS to another language);
 \item\label{it:scope-annotation} annotation and documentation of OMS, mappings between OMS, symbols,
 and sentences;
 \item recommendations of vocabularies for annotating and documenting OMS;
@@ -1447,8 +1447,8 @@ structured text format), one can be more specific about what the annotation/comm
 that serialization must look like in order to support this identifier injection.  
 Well-behaved XML and RDF schemas support identifier injection in a `nice' way (rather than using
 text-level comments). \cbs In the worst case it is not possible to
-inject something into an OMS language fragment, because the OMS language serialization simply
-does not allow  to write suitable comments. In this case the solution is to point into the OMS language fragment from the enclosing context \cbe
+inject something into an OMS language fragment, because the OMS language serialization 
+does not enable the addition of suitable comments. In this case the solution is to point into the OMS language fragment from the enclosing context \cbe
 by using \termref{standoff markup}.
 
 
@@ -1456,7 +1456,7 @@ Further conformance criteria in this section are introduced to facilitate the co
 verbatim fragments of OMS language inside a \DOL document.
 
 Independently from these criteria,  \cbs several levels of conformance of a
-serialization are distinguished. They differ with respect to its means of conveniently abbreviating long IRI identifiers. \cbe
+serialization are distinguished. They differ with respect to their means of conveniently abbreviating long IRI identifiers. \cbe
 \end{fminipage}
 
 \cbs There are seven levels of conformance of a serialization of an OMS language with \DOL{}.
@@ -1488,7 +1488,7 @@ The given serialization has to be specified as an RDF vocabulary, which
 \begin{itemize}
 \item The elements of the vocabulary belong to one or more RDF namespaces
  identified by absolute URIs.
-\item The serialization shall specify ways of giving IRIs or URIs to all structural elements of an OMS. (The  rationale is that RDF in principle allows for identifying any kinds of items, so an RDF-based serialization of an OMS language should not forbid making use of such RDF constructs that do allow for identifying arbitrary items.)
+\item The serialization shall specify ways of giving IRIs or URIs to all structural elements of an OMS. (The  rationale is that RDF\cbs syntax supports the identification of\cbe any kinds of items, so an RDF-based serialization of an OMS language should not forbid making use of such RDF constructs that do allow for identifying arbitrary items.)
 % \todonote[author=Christoph Lange,date=D:201109221422+02'00',type=q-aut]{Update on 2014-10-09: Is it OK to have this footnote here?  Or if not, where should it go?  I believe it answers the following question:\\ And what if it doesn't? \eg OWL doesn't specify IRIs for import declarations, so we can, \eg, not annotate them when using the RDF serialization of OWL. We could only do it via RDF reification, or by using an XML serialization.}
 \item There shall be no additional rules (stated in writing in the specification of the serialization, or formalized in its implementation in, e.g., OWL) that forbid properties from foreign vocabulary namespaces to be stated about arbitrary subjects for the purpose of annotation.
 \end{itemize}
