streamlined and commented mapping definitions

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1883,6 +1883,9 @@ expressing that the second one is logically implied by the first one.}
 Entailment expresses that each model \termref{satisfying} the first OMS also 
 satisfies the second OMS (or the sentence, respectively).
 \end{note}
+\begin{note}
+Entailments can also be stated between \termref{networks}, or networks and OMS.
+\end{note}
 \cbe
 \begin{note}
 The converse is generalization.
